# EasyChatServer

./: .gitignore  CMakeLists.txt  README.md
config/: server.conf
include/business/: message_handler.h  user_manager.h
include/common/: config.h  daemon.h  logger.h  protocol.h  signal_handler.h
include/database/: connection_pool.h
include/network/: epoll.h  reactor.h  socket.h
include/threadpool/: threadpool.h
logs/: server.out
python/: client.py  example_client.py  example_monitor.py  monitor.py  protocol.py  test_chat.py  test_concurrent.py  test_offline.py
scripts/: init_database.sql  restart.sh  start.sh  status.sh  stop.sh
src/: main.cpp
src/business/: mesage_handler.cpp  message_handler.cpp  user_manager.cpp
src/common/: config.cpp  daemon.cpp  logger.cpp  protocol.cpp  signal_handler.cpp
src/database/: connection_pool.cpp
src/network/: epoll.cpp  reactor.cpp  socket.cpp
src/threadpool/: theeadpool.cpp
tests/: example_client.py  example_monitor.py  test_client.py  test_concurrent.py  test_throughput.py
